--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -1,10 +1,31 @@
-txt.welcome=Willkommen zu CARS
+txt.welcome=Willkommen zu LIBRARY
 
+CAR
 lbl.brand=Hersteller
 lbl.color=Farbe
 lbl.wheelCount=Anzahl Räder
 lbl.yearOfProduction=Produktionsjahr
 lbl.isDieselEngine=Hat Diesel-Motor?
+
+msg.validator.required=Bitte Wert angeben
+msg.validator.intRange=Bitte einen Wert zwischen ${min} und ${max} angeben.
+msg.selectCar=Bitte ein Auto auswählen.
+
+#############################
+LIB
+
+lbl.failureList=Versäumnisse
+lbl.kindOfPublicationList=Publikationsarten
+
+btn.masterDataManagement=Stammdatenverwaltung
+btn.inventoryManagement=Bestandsverwaltung
+btn.search=Suche
+btn.rental=Verleih
+btn.reminderManagement=Mahnwesen
+
+btn.kindOfPublication=Publikationsart
+
+
 
 btn.add=Hinzufügen
 btn.edit=Bearbeiten
@@ -12,6 +33,3 @@ btn.delete=Löschen
 btn.save=Speichern
 btn.cancel=Abbrechen
 
-msg.validator.required=Bitte Wert angeben
-msg.validator.intRange=Bitte einen Wert zwischen ${min} und ${max} angeben.
-msg.selectCar=Bitte ein Auto auswählen.
