Presentation Layer für Bestandsverwaltung (Publikationen)

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -1,4 +1,5 @@
 txt.welcome=Willkommen zu LIBRARY
+txt.search=Suche
 
 CAR
 lbl.brand=Hersteller
@@ -14,16 +15,24 @@ msg.selectCar=Bitte ein Auto auswählen.
 #############################
 LIB
 
+lbl.id=interne ID
+lbl.title=Titel
+lbl.authors=Autoren
+lbl.yearOfPublication=Jahr der Veröffentlichung
+lbl.isbn=ISBN
+lbl.keywords=Schlüsselwörter
+lbl.quantity=Menge
+
 lbl.failureList=Versäumnisse
 lbl.kindOfPublicationList=Publikationsarten
 
 btn.masterDataManagement=Stammdatenverwaltung
 btn.inventoryManagement=Bestandsverwaltung
-btn.search=Suche
+btn.search=Suchen
 btn.rental=Verleih
 btn.reminderManagement=Mahnwesen
 
-btn.kindOfPublication=Publikationsart
+btn.publicationType=Publikationsart
 
 
 
