--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -15,13 +15,18 @@ msg.selectCar=Bitte ein Auto auswählen.
 #############################
 LIB
 
-lbl.id=interne ID
+lbl.publicationId=Publications-ID
 lbl.title=Titel
 lbl.authors=Autoren
 lbl.yearOfPublication=Jahr der Veröffentlichung
 lbl.isbn=ISBN
 lbl.keywords=Schlüsselwörter
 lbl.quantity=Menge
+
+lbl.outgoDate=Verleihdatum
+lbl.returnDate=Rückgabedatum
+lbl.lender=Ausleiher
+lbl.amountOfReminders=Anzahl der Mahnungen
 
 lbl.failureList=Versäumnisse
 lbl.kindOfPublicationList=Publikationsarten
@@ -33,7 +38,8 @@ btn.rental=Verleih
 btn.reminderManagement=Mahnwesen
 
 btn.publicationType=Publikationsart
-
+btn.keywords=Schlüsselwörter
+btn.lender=Ausleiher
 
 
 btn.add=Hinzufügen
