Benötigte Daten werden beim anlegen einer Publication in der Action aus der DB geladen

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -6,6 +6,7 @@ txt.masterDataManagement=Stammdatenverwaltung
 txt.masterDataManagement.publicationTypes=Stammdatenverwaltung - Publikationstypen
 txt.masterDataManagement.keywords=Stammdatenverwaltung - Schlüsselwörter
 txt.masterDataManagement.lender=Stammdatenverwaltung - Ausleiher
+txt.inventoryManagement=Bestandsverwaltung
 
 CAR
 lbl.brand=Hersteller
