funktionalität für Stammdatenverwaltung steht - Hier können auch Bugs gesucht werden

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -6,7 +6,9 @@ txt.masterDataManagement=Stammdatenverwaltung
 txt.masterDataManagement.publicationTypes=Stammdatenverwaltung - Publikationstypen
 txt.masterDataManagement.keywords=Stammdatenverwaltung - Schlüsselwörter
 txt.masterDataManagement.lender=Stammdatenverwaltung - Ausleiher
+txt.masterDataManagement.authors=Stammdatenverwaltung - Autor
 txt.inventoryManagement=Bestandsverwaltung
+txt.admonitionManagement=Mahnungswesen
 
 CAR
 lbl.brand=Hersteller
@@ -22,6 +24,11 @@ msg.selectCar=Bitte ein Auto auswählen.
 #############################
 LIB
 
+keyword=Schlüsselword
+
+author=Autor
+author.name=Name
+
 lbl.publicationId=Publications-ID
 lbl.title=Titel
 lbl.authors=Autoren
@@ -30,10 +37,13 @@ lbl.isbn=ISBN
 lbl.keywords=Schlüsselwörter
 lbl.quantity=Menge
 
+
 lbl.outgoDate=Verleihdatum
 lbl.returnDate=Rückgabedatum
 lbl.lender=Ausleiher
 lbl.amountOfReminders=Anzahl der Mahnungen
+
+
 
 lbl.failureList=Versäumnisse
 lbl.publicationType=Publikationsarten
@@ -58,6 +68,6 @@ btn.save=Speichern
 btn.cancel=Abbrechen
 
 lender.matriculationNumber=Matrikelnummer
-lender.firstname=Vorname
-lender.lastname=Nachname
+lender.firstName=Vorname
+lender.lastName=Nachname
 
