--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -10,24 +10,19 @@ txt.masterDataManagement.authors=Stammdatenverwaltung - Autor
 txt.inventoryManagement=Bestandsverwaltung
 txt.admonitionManagement=Mahnungswesen
 
-CAR
-lbl.brand=Hersteller
-lbl.color=Farbe
-lbl.wheelCount=Anzahl Räder
-lbl.yearOfProduction=Produktionsjahr
-lbl.isDieselEngine=Hat Diesel-Motor?
 
 msg.validator.required=Bitte Wert angeben
 msg.validator.intRange=Bitte einen Wert zwischen ${min} und ${max} angeben.
-msg.selectCar=Bitte ein Auto auswählen.
+msg.hasToBeInteger=Bitte einen numerischen Wert angeben.
 
-#############################
-LIB
-
-keyword=Schlüsselword
+keyword=Schlüsselwort
 
 author=Autor
 author.name=Name
+
+lender.matriculationNumber=Matrikelnummer
+lender.firstname=Vorname
+lender.lastname=Nachname
 
 lbl.publicationId=Publications-ID
 lbl.title=Titel
@@ -56,9 +51,11 @@ btn.search=Suchen
 btn.rental=Verleih
 btn.reminderManagement=Mahnwesen
 
-btn.publicationType=Publikationsart
+btn.publicationType=Publikationsarten
 btn.keywords=Schlüsselwörter
 btn.lender=Ausleiher
+btn.author=Autoren
+btn.publisher=Verläge
 
 
 btn.add=Hinzufügen
