Publications können hinzugefügt und gelöscht werden

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -31,6 +31,7 @@ lbl.yearOfPublication=Jahr der Veröffentlichung
 lbl.isbn=ISBN
 lbl.keywords=Schlüsselwörter
 lbl.quantity=Menge
+publication.nakId=NAK-ID
 
 
 lbl.outgoDate=Verleihdatum
