Internationalisierungsversuch mit displaytag

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -1,6 +1,6 @@
 txt.welcome=Willkommen zu LIBRARY
 txt.search=Suche
-txt.rental=Verleih
+txt.lendingManagement=Verleih
 txt.publicationTypes=Publikationstypen
 txt.masterDataManagement=Stammdatenverwaltung
 txt.masterDataManagement.publicationTypes=Stammdatenverwaltung - Publikationstypen
@@ -24,20 +24,23 @@ lender.matriculationNumber=Matrikelnummer
 lender.firstname=Vorname
 lender.lastname=Nachname
 
-lbl.publicationId=Publications-ID
-lbl.title=Titel
-lbl.authors=Autoren
-lbl.yearOfPublication=Jahr der Veröffentlichung
-lbl.isbn=ISBN
-lbl.keywords=Schlüsselwörter
-lbl.quantity=Menge
+firstname=bla bla
+
+publication.publicationId=Publications-ID
+publication.title=Titel
+publication.authors=Autoren
+publication.dateOfPublication=Datum der Veröffentlichung
+publication.isbn=ISBN
+publication.keywords=Schlüsselwörter
+publication.quantity=Menge
 publication.nakId=NAK-ID
+publication.publisher=Verlag
 
 
-lbl.outgoDate=Verleihdatum
-lbl.returnDate=Rückgabedatum
-lbl.lender=Ausleiher
-lbl.amountOfReminders=Anzahl der Mahnungen
+lending.outgoDate=Verleihdatum
+lending.expectedReturnDate=Rückgabedatum
+lending.lender=Ausleiher
+lending.numberOfLendingExtensions=Anzahl der Verlängerungen
 
 
 
