Validierung für Publisher

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -40,7 +40,7 @@ lending.expectedReturnDate=Rückgabedatum
 lending.lender=Ausleiher
 lending.numberOfLendingExtensions=Anzahl der Verlängerungen
 
-
+publisher.name=Name
 
 lbl.failureList=Versäumnisse
 lbl.publicationType=Publikationsarten
