Verlängerung von Lendings möglich

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -65,6 +65,7 @@ btn.edit=Bearbeiten
 btn.delete=Löschen
 btn.save=Speichern
 btn.cancel=Abbrechen
+btn.extend=Verlängern
 
 lender.matriculationNumber=Matrikelnummer
 lender.firstName=Vorname
