AdmonitionProcesses werden ausgewiesen

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -9,6 +9,8 @@ txt.masterDataManagement.lender=Stammdatenverwaltung - Ausleiher
 txt.masterDataManagement.authors=Stammdatenverwaltung - Autor
 txt.inventoryManagement=Bestandsverwaltung
 txt.admonitionManagement=Mahnungswesen
+txt.delayedLendings=Überzogene Verleihvorgänge
+txt.admonitionProcesses=Mahnvorgänge
 
 
 msg.validator.required=Bitte Wert angeben
@@ -66,6 +68,8 @@ btn.delete=Löschen
 btn.save=Speichern
 btn.cancel=Abbrechen
 btn.extend=Verlängern
+btn.finish=Beenden
+btn.addAdmonition=Mahnung erstellen
 
 lender.matriculationNumber=Matrikelnummer
 lender.firstName=Vorname
