Bearbeitung des publisherd einer publication möglich

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -60,6 +60,8 @@ btn.keywords=Schlüsselwörter
 btn.lender=Ausleiher
 btn.author=Autoren
 btn.publisher=Verläge
+btn.lending=Alle Verleihvorgänge
+btn.delayedLending=Überzogene Verleihvorgänge
 
 
 btn.add=Hinzufügen
