Kommentare und struts.xml

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -65,8 +65,12 @@ btn.delayedLending=Überzogene Verleihvorgänge
 
 
 btn.add=Hinzufügen
+btn.add.keyword=Schlüsselwörter hinzufügen
+btn.add.author=Autoren hinzufügen
 btn.edit=Bearbeiten
 btn.delete=Löschen
+btn.delete.keyword=Schlüsselwörter löschen
+btn.delete.author=Autoren löschen
 btn.save=Speichern
 btn.cancel=Abbrechen
 btn.extend=Verlängern
