--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -11,13 +11,20 @@ txt.inventoryManagement=Bestandsverwaltung
 txt.admonitionManagement=Mahnungswesen
 txt.delayedLendings=Überzogene Verleihvorgänge
 txt.admonitionProcesses=Mahnvorgänge
-
+txt.inventoryManagement.addAuthor=Autoren hinzufügen
+txt.inventoryManagement.deleteAuthor=Autoren löschen
+txt.inventoryManagement.addKeyword=Schlüsselwörter hinzufügen
+txt.inventoryManagement.deleteKeyword=Schlüsselwörter löschen
+txt.inventoryManagement.editPublication=Publikation bearbeiten
+txt.inventoryManagement.addPublication=Publikation hinzufügen
+txt.inventoryManagement.editPublicationType=Publikationtyp bearbeiten
+txt.inventoryManagement.editPublisher=Verlag bearbeiten
 
 msg.validator.required=Bitte Wert angeben
 msg.validator.intRange=Bitte einen Wert zwischen ${min} und ${max} angeben.
 msg.hasToBeInteger=Bitte einen numerischen Wert angeben.
+msg.noMoreExtension=Der Verleihvorgang wurde bereits 2 mal verlängert.
 
-keyword=Schlüsselwort
 
 author=Autor
 author.name=Name
@@ -60,8 +67,8 @@ btn.keywords=Schlüsselwörter
 btn.lender=Ausleiher
 btn.author=Autoren
 btn.publisher=Verläge
-btn.lending=Alle Verleihvorgänge
-btn.delayedLending=Überzogene Verleihvorgänge
+btn.lendings=Alle Verleihvorgänge
+btn.delayedLendings=Überzogene Verleihvorgänge
 
 
 btn.add=Hinzufügen
