Bearbeitung von Publikationen möglich

--- a/Cars/src/messages_de.properties
+++ b/Cars/src/messages_de.properties
@@ -25,6 +25,7 @@ msg.validator.intRange=Bitte einen Wert zwischen ${min} und ${max} angeben.
 msg.hasToBeInteger=Bitte einen numerischen Wert angeben.
 msg.noMoreExtension=Der Verleihvorgang wurde bereits 2 mal verlängert.
 
+format.date = {0,date,dd.MM.yyyy}
 
 author=Autor
 author.name=Name
@@ -42,6 +43,7 @@ publication.keywords=Schlüsselwörter
 publication.quantity=Menge
 publication.nakId=NAK-ID
 publication.publisher=Verlag
+publication.publicationType=Publikationsart
 
 
 lending.outgoDate=Verleihdatum
@@ -75,6 +77,8 @@ btn.add=Hinzufügen
 btn.add.keyword=Schlüsselwörter hinzufügen
 btn.add.author=Autoren hinzufügen
 btn.edit=Bearbeiten
+btn.edit.publicationType=Publikationsart bearbeiten
+btn.edit.publisher=Verlag bearbeiten
 btn.delete=Löschen
 btn.delete.keyword=Schlüsselwörter löschen
 btn.delete.author=Autoren löschen
