--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -19,13 +19,12 @@ txt.inventoryManagement.editPublication=Publikation bearbeiten
 txt.inventoryManagement.addPublication=Publikation hinzufügen
 txt.inventoryManagement.editPublicationType=Publikationtyp bearbeiten
 txt.inventoryManagement.editPublisher=Verlag bearbeiten
+txt.delayedLendingsWithoutAdmonitionProcess=Überzogene Verleihvorgänge ohne Mahnvorgang
 
 msg.validator.required=Bitte Wert angeben
 msg.validator.intRange=Bitte einen Wert zwischen ${min} und ${max} angeben.
 msg.hasToBeInteger=Bitte einen numerischen Wert angeben.
 msg.noMoreExtension=Der Verleihvorgang wurde bereits 2 mal verlängert.
-
-format.date = {0,date,dd.MM.yyyy}
 
 author=Autor
 author.name=Name
@@ -87,6 +86,7 @@ btn.cancel=Abbrechen
 btn.extend=Verlängern
 btn.finish=Beenden
 btn.addAdmonition=Mahnung erstellen
+btn.lost=Verlust vermerken
 
 lender.matriculationNumber=Matrikelnummer
 lender.firstName=Vorname
