--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -25,6 +25,14 @@ msg.validator.required=Bitte Wert angeben
 msg.validator.intRange=Bitte einen Wert zwischen ${min} und ${max} angeben.
 msg.hasToBeInteger=Bitte einen numerischen Wert angeben.
 msg.noMoreExtension=Der Verleihvorgang wurde bereits 2 mal verlängert.
+msg.matriculationNumberNotAvailable=Diese Martikulationsnummer ist schon vergeben.
+msg.selectLending=Bitte ein Verleihvorgang auswählen.
+msg.selectLender=Bitte einen Ausleiher auswählen.
+msg.selectPublication=Bitte eine Publikation auswählen.
+msg.selectKeyword=Bitte Schlüsselwort auswählen.
+msg.selectAuthor=Bitte Autor auswählen.
+msg.selectPublisher=Bitte Verlag auswählen.
+msg.selectPublicationType=Bitte Publikationsart auswählen.
 
 author=Autor
 author.name=Name
