--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -33,6 +33,7 @@ msg.selectKeyword=Bitte Schlüsselwort auswählen.
 msg.selectAuthor=Bitte Autor auswählen.
 msg.selectPublisher=Bitte Verlag auswählen.
 msg.selectPublicationType=Bitte Publikationsart auswählen.
+msg.quantity.min=Bitte mindestens eine Menge von 1 erfassen.
 
 author=Autor
 author.name=Name
