Isbn Suche von allgemeiner Suche getrennt

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -1,5 +1,6 @@
 txt.welcome=Willkommen zu LIBRARY
 txt.search=Suche
+txt.search.isbn=ISBN-Suche
 txt.lendingManagement=Verleih
 txt.publicationTypes=Publikationstypen
 txt.masterDataManagement=Stammdatenverwaltung
@@ -61,15 +62,11 @@ lending.numberOfLendingExtensions=Anzahl der Verlängerungen
 
 publisher.name=Name
 
-lbl.failureList=Versäumnisse
-lbl.publicationType=Publikationsarten
-
-lbl.publicationType.name=Bezeichnung
-
 btn.masterDataManagement=Stammdatenverwaltung
 btn.inventoryManagement=Bestandsverwaltung
 btn.search=Suchen
-btn.rental=Verleih
+btn.search.isbn=Über ISBN Suchen
+btn.lendingManagement=Verleih
 btn.reminderManagement=Mahnwesen
 
 btn.publicationType=Publikationsarten
