TODOs in den Services

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -35,6 +35,9 @@ msg.selectAuthor=Bitte Autor auswählen.
 msg.selectPublisher=Bitte Verlag auswählen.
 msg.selectPublicationType=Bitte Publikationsart auswählen.
 msg.quantity.min=Bitte mindestens eine Menge von 1 erfassen.
+msg.admonitionProcessAlreadyExists=Für diesen Ausleihvorgang besteht schon ein Mahnvorgang.
+msg.maximumOfAdmonitionReached=Es wurden schon 3 Mahnungen erstellt.
+msg.noAdmonitionProcessFound=Es wurde kein Mahnvorgang gefunden.
 
 author=Autor
 author.name=Name
@@ -81,6 +84,7 @@ btn.delayedLendings=Überzogene Verleihvorgänge
 btn.add=Hinzufügen
 btn.add.keyword=Schlüsselwörter hinzufügen
 btn.add.author=Autoren hinzufügen
+btn.addAdmonitionProcess=Mahnvorgang erstellen
 btn.edit=Bearbeiten
 btn.edit.publicationType=Publikationsart bearbeiten
 btn.edit.publisher=Verlag bearbeiten
