Menu für Verleih ausgebaut

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -9,7 +9,7 @@ txt.masterDataManagement.keywords=Stammdatenverwaltung - Schlüsselwörter
 txt.masterDataManagement.lender=Stammdatenverwaltung - Ausleiher
 txt.masterDataManagement.authors=Stammdatenverwaltung - Autor
 txt.inventoryManagement=Bestandsverwaltung
-txt.admonitionManagement=Mahnungswesen
+txt.admonitionManagement=Mahnwesen
 txt.delayedLendings=Überzogene Verleihvorgänge
 txt.admonitionProcesses=Mahnvorgänge
 txt.inventoryManagement.addAuthor=Autoren hinzufügen
@@ -94,7 +94,7 @@ btn.delete.author=Autoren löschen
 btn.save=Speichern
 btn.cancel=Abbrechen
 btn.extend=Verlängern
-btn.finish=Beenden
+btn.finish=Rückgabe erfassen
 btn.addAdmonition=Mahnung erstellen
 btn.lost=Verlust vermerken
 
