Fehlermeldung länge isbn

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -38,6 +38,7 @@ msg.quantity.min=Bitte mindestens eine Menge von 1 erfassen.
 msg.admonitionProcessAlreadyExists=Für diesen Ausleihvorgang besteht schon ein Mahnvorgang.
 msg.maximumOfAdmonitionReached=Es wurden schon 3 Mahnungen erstellt.
 msg.noAdmonitionProcessFound=Es wurde kein Mahnvorgang gefunden.
+msg.isbn.lenght=Die ISBN muss eine Länge von 13 haben.
 
 author=Autor
 author.name=Name
