Meldung beim Löschen verwendeter Stammdaten

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -39,6 +39,11 @@ msg.admonitionProcessAlreadyExists=Für diesen Ausleihvorgang besteht schon ein M
 msg.maximumOfAdmonitionReached=Es wurden schon 3 Mahnungen erstellt.
 msg.noAdmonitionProcessFound=Es wurde kein Mahnvorgang gefunden.
 msg.isbn.lenght=Die ISBN muss eine Länge von 13 haben.
+msg.authorInUse=Der Autor wird in einer Publikation verwendet. Daher kann er nicht gelöscht werden.
+msg.publicationTypeInUse=Die Publikationsart wird in einer Publikation verwendet. Daher kann sie nicht gelöscht werden.
+msg.keywordInUse=Das Schlüsselwort wird in einer Publikation verwendet. Daher kann es nicht gelöscht werden.
+msg.publisherInUse=Der Verlag wird in einer Publikation verwendet. Daher kann er nicht gelöscht werden.
+
 
 author=Autor
 author.name=Name
