- authoren können nicht mehr gelöscht werden, wenn sie verwendet werden

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -43,6 +43,7 @@ msg.authorInUse=Der Autor wird in einer Publikation verwendet. Daher kann er nic
 msg.publicationTypeInUse=Die Publikationsart wird in einer Publikation verwendet. Daher kann sie nicht gelöscht werden.
 msg.keywordInUse=Das Schlüsselwort wird in einer Publikation verwendet. Daher kann es nicht gelöscht werden.
 msg.publisherInUse=Der Verlag wird in einer Publikation verwendet. Daher kann er nicht gelöscht werden.
+msg.lenderInUse=Der Ausleiher ist an einem Ausleihvorgang beteiligt. Daher kann er nicht gelöscht werden.
 
 
 author=Autor
