Suche nach isbn

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -44,6 +44,7 @@ msg.publicationTypeInUse=Die Publikationsart wird in einer Publikation verwendet
 msg.keywordInUse=Das Schlüsselwort wird in einer Publikation verwendet. Daher kann es nicht gelöscht werden.
 msg.publisherInUse=Der Verlag wird in einer Publikation verwendet. Daher kann er nicht gelöscht werden.
 msg.lenderInUse=Der Ausleiher ist an einem Ausleihvorgang beteiligt. Daher kann er nicht gelöscht werden.
+msg.noValidIsbn=ISBN besteht nur aus Ziffern.
 
 
 author=Autor
