Referenzen zwischen AdmonitionProcess und Lending verändert. Entsprechende Services und DAOs angepasst

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -45,6 +45,7 @@ msg.keywordInUse=Das Schlüsselwort wird in einer Publikation verwendet. Daher ka
 msg.publisherInUse=Der Verlag wird in einer Publikation verwendet. Daher kann er nicht gelöscht werden.
 msg.lenderInUse=Der Ausleiher ist an einem Ausleihvorgang beteiligt. Daher kann er nicht gelöscht werden.
 msg.noValidIsbn=ISBN besteht nur aus Ziffern.
+msg.sendThreeAdmonitions=Bevor der Verlust vermerkt wird, müssen 3 Mahnungen verschickt werden.
 
 
 author=Autor
