--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -74,6 +74,8 @@ lending.numberOfLendingExtensions=Anzahl der Verlängerungen
 
 publisher.name=Name
 
+keyword=Schlüsselwort
+
 btn.masterDataManagement=Stammdatenverwaltung
 btn.inventoryManagement=Bestandsverwaltung
 btn.search=Suchen
