--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -7,7 +7,8 @@ txt.masterDataManagement=Stammdatenverwaltung
 txt.masterDataManagement.publicationTypes=Stammdatenverwaltung - Publikationstypen
 txt.masterDataManagement.keywords=Stammdatenverwaltung - Schlüsselwörter
 txt.masterDataManagement.lender=Stammdatenverwaltung - Ausleiher
-txt.masterDataManagement.authors=Stammdatenverwaltung - Autor
+txt.masterDataManagement.authors=Stammdatenverwaltung - Autoren
+txt.masterDataManagement.publisher=Stammdatenverwaltung - Verlage
 txt.inventoryManagement=Bestandsverwaltung
 txt.admonitionManagement=Mahnwesen
 txt.delayedLendings=Überzogene Verleihvorgänge
@@ -87,7 +88,7 @@ btn.publicationType=Publikationsarten
 btn.keywords=Schlüsselwörter
 btn.lender=Ausleiher
 btn.author=Autoren
-btn.publisher=Verläge
+btn.publisher=Verlage
 btn.lendings=Alle Verleihvorgänge
 btn.delayedLendings=Überzogene Verleihvorgänge
 
