--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -47,6 +47,7 @@ msg.publisherInUse=Der Verlag wird in einer Publikation verwendet. Daher kann er
 msg.lenderInUse=Der Ausleiher ist an einem Ausleihvorgang beteiligt. Daher kann er nicht gelöscht werden.
 msg.noValidIsbn=ISBN besteht nur aus Ziffern.
 msg.sendThreeAdmonitions=Bevor der Verlust vermerkt wird, müssen 3 Mahnungen verschickt werden.
+msg.publicationUsedInLending=Die Publikation ist verliehen und kann deshalb nicht gelöscht werden.
 
 
 author=Autor
