--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -48,6 +48,10 @@ msg.lenderInUse=Der Ausleiher ist an einem Ausleihvorgang beteiligt. Daher kann 
 msg.noValidIsbn=ISBN besteht nur aus Ziffern.
 msg.sendThreeAdmonitions=Bevor der Verlust vermerkt wird, müssen 3 Mahnungen verschickt werden.
 msg.publicationUsedInLending=Die Publikation ist verliehen und kann deshalb nicht gelöscht werden.
+msg.publisherNameAlreadyExists=Ein Verlag mit diesem Namen existiert bereits.
+msg.publicationTypeNameAlreadyExists=Eine Publikationsart mit dieser Bezeichnung existiert bereits.
+msg.authorNameAlreadyExists=Ein Author mit diesem Namen existiert bereits.
+msg.keywordNameAlreadyExists=Ein Schlüsselwort mit dieser Bezeichnung existiert bereits.
 
 
 author=Autor
