Autoren zum hinzuüfen zu publikation wreden angezeigt

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -80,7 +80,7 @@ lending.numberOfLendingExtensions=Anzahl der Verlängerungen
 
 publisher.name=Name
 
-keyword=Schlüsselwort
+keyword.keyword=Schlüsselwort
 
 btn.masterDataManagement=Stammdatenverwaltung
 btn.inventoryManagement=Bestandsverwaltung
