Verhindert dass publikationen so bearbeitet werden können, dass sie keine autoren oder schlüsselwörter haben

--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -52,7 +52,8 @@ msg.publisherNameAlreadyExists=Ein Verlag mit diesem Namen existiert bereits.
 msg.publicationTypeNameAlreadyExists=Eine Publikationsart mit dieser Bezeichnung existiert bereits.
 msg.authorNameAlreadyExists=Ein Author mit diesem Namen existiert bereits.
 msg.keywordNameAlreadyExists=Ein Schlüsselwort mit dieser Bezeichnung existiert bereits.
-
+msg.oneAuthorHasToBeSet=Ein Autor muss der Publikation zugewiesen sein. Löschen wurde abgebrochen.
+msg.oneKeywordHasToBeSet=Ein Schlüsselwort muss der Publikation zugewiesen sein. Löschen wurde abgebrochen.
 
 author=Autor
 author.name=Name
