--- a/Cars/src/messages.properties
+++ b/Cars/src/messages.properties
@@ -73,7 +73,7 @@ publication.nakId=NAK-ID
 publication.publisher=Verlag
 publication.publicationType=Publikationsart
 
-
+lendings=Ausleihvorgänge
 lending.outgoDate=Verleihdatum
 lending.expectedReturnDate=Rückgabedatum
 lending.lender=Ausleiher
@@ -99,6 +99,7 @@ btn.lendings=Alle Verleihvorgänge
 btn.delayedLendings=Überzogene Verleihvorgänge
 
 
+btn.detail=Detailansicht
 btn.add=Hinzufügen
 btn.add.keyword=Schlüsselwörter hinzufügen
 btn.add.author=Autoren hinzufügen
